--- a/Maps/package.json
+++ b/Maps/package.json
@@ -10,7 +10,15 @@
   "author": "Andrei Vasiliev",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-typescript": "^7.27.1",
+    "babel-loader": "^10.0.0",
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "core-js": "^3.44.0"
   }
 }
