--- a/Maps/Maps.csproj
+++ b/Maps/Maps.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <TypeScriptCompile Include="wwwroot\js\HelloWorld.ts" />
+    </ItemGroup>
+
 </Project>
