--- a/Maps/package.json
+++ b/Maps/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
     "babel-loader": "^10.0.0",
+    "typescript": "^5.8.3",
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1"
   },
